# cross-platform-client-network-module

./: CMakeLists.txt  README.md
sample/: ClientNetwork_Windows_SSL.cpp  ClientNetwork_Windows_SSL.hh  Communicate.cpp  Communicate.hh  Communication.cpp  Communication.hh  Connection.cpp  Connection.hh  HttpsCommunication.cpp  HttpsCommunication.hh  main.cpp
sample/ssl_sample/: ClientNetwork_Windows_SSL.hh  HttpsCommunication.cpp  HttpsCommunication.hh  HttpsConnection.cpp  HttpsConnection.hh
src/: AClientNetwork_Linux.cpp  AClientNetwork_Linux.hh  AClientNetwork_Windows.cpp  AClientNetwork_Windows.hh  ClientNetwork.cpp  ClientNetwork.hh  ClientNetwork_SSL.cpp  ClientNetwork_SSL.hh  IClientNetwork.hh  Log.cpp  Log.hh  WinNetwork.cpp  WinNetwork.hh
